--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -83,10 +83,12 @@ jobs:
 
       - name: Run benchmarks
         env:
-            OE_LICENSE: ${{ github.workspace }}/oe_license.txt
+            LICENSE: ${{ secrets.OELICENSE }}
         shell: bash -l {0}
         run: |
           set -e
+          echo "$LICENSE" > /tmp/oe_license.txt
+          export OE_LICENSE=/tmp/oe_license.txt
           python main.py ${{ inputs.path }} $(nproc)
 
       - name: Commit results
