git add only the output csv files instead of .
there are three assumptions encoded here that are shared with `main.py`. first,
the output is expected to be written in the same directory as the input YAML
file; second, the output subdirectory is expected to be called `output`; and
third, the desired output files are `dde.csv`, `icrmsd.csv`, `rmsd.csv`, and
`tfd.csv`

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -100,7 +100,10 @@ jobs:
           git config --global init.defaultBranch main
 
           # Commit the benchmark results and push
-          git add .
+
+          input_file=${{ inputs.path }}                        # path to the input YAML file
+          input_dir=$(dirname $input_file)                     # parent directory of input YAML file
+          git add $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv  # add only the output CSV files
           git commit -m "Add benchmark results"
           git push
 
