Fix license handling (#2)
* Revert back to previous secret code

This (partially) reverts commit 77b80a09d38eab272fb406856e9f4d02b924d0c1.

* ignore oe_license.txt

* update path to organization OE_LICENSE

* remove the license before performing any git operations

* git add only the output csv files instead of .

there are three assumptions encoded here that are shared with `main.py`. first,
the output is expected to be written in the same directory as the input YAML
file; second, the output subdirectory is expected to be called `output`; and
third, the desired output files are `dde.csv`, `icrmsd.csv`, `rmsd.csv`, and
`tfd.csv`

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -83,11 +83,14 @@ jobs:
 
       - name: Run benchmarks
         env:
-            OE_LICENSE: ${{ github.workspace }}/oe_license.txt
+            LICENSE: ${{ secrets.OE_LICENSE }}
         shell: bash -l {0}
         run: |
           set -e
+          echo "$LICENSE" > /tmp/oe_license.txt
+          export OE_LICENSE=/tmp/oe_license.txt
           python main.py ${{ inputs.path }} $(nproc)
+          rm $OE_LICENSE
 
       - name: Commit results
         shell: bash -l {0}
@@ -97,7 +100,10 @@ jobs:
           git config --global init.defaultBranch main
 
           # Commit the benchmark results and push
-          git add .
+
+          input_file=${{ inputs.path }}                        # path to the input YAML file
+          input_dir=$(dirname $input_file)                     # parent directory of input YAML file
+          git add $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv  # add only the output CSV files
           git commit -m "Add benchmark results"
           git push
 
