--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -30,7 +30,7 @@ jobs:
           provider: "aws"
           action: "start"
           aws_image_id: ami-0d5079d9be06933e5
-          aws_instance_type: t4g.large
+          aws_instance_type: t3.large
           aws_region_name: us-east-1
           aws_home_dir: /home/ubuntu
         env:
