--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -48,9 +48,16 @@ jobs:
         with:
           environment-file: devtools/env.yaml
 
-      - name: Run integration tests
+      - name: Run test benchmark
+        env:
+            LICENSE: ${{ secrets.OE_LICENSE }}
+        shell: bash -l {0}
         run: |
+          set -e
+          echo "$LICENSE" > /tmp/oe_license.txt
+          export OE_LICENSE=/tmp/oe_license.txt
           python main.py test.yaml $(nproc)
+          rm $OE_LICENSE
 
   stop-aws-runner:
     runs-on: ubuntu-latest
