--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -18,4 +18,4 @@ dependencies:
   - tqdm
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@allow-unassigned-torsions
+    - git+https://github.com/openforcefield/yammbs.git@0.0.8
