the tag is 0.1.0beta0

--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -18,4 +18,4 @@ dependencies:
   - tqdm
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@0.1.0beta
+    - git+https://github.com/openforcefield/yammbs.git@0.1.0beta0
