pass title to zenodo_upload.py
ideally I would probably use the PR title as the submission title, but at least
this is less generic than "Test benchmark upload"

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -151,8 +151,9 @@ jobs:
           bzip2 tmp.sqlite
           micromamba env export > env.yaml
           input_files=$(python get_files.py ${{ inputs.path }})
-          python zenodo_upload.py tmp.sqlite.bz2 \
-            $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv env.yaml main.py $input_files
+          python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
+            tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
+            env.yaml main.py $input_files
 
       - name: Report status to PR
         id: reportStatusToPr
