--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -126,6 +126,14 @@ jobs:
           python main.py ${{ inputs.path }} $(nproc)
           rm $OE_LICENSE
 
+      - name: Plot results
+        shell: bash -l {0}
+        run: |
+          set -e
+          input_file=${{ inputs.path }}
+          input_dir=$(dirname $input_file)
+          python plot.py $input_dir -o $input_dir/output
+
       - name: Commit results
         shell: bash -l {0}
         run: |
@@ -138,6 +146,7 @@ jobs:
           input_file=${{ inputs.path }}                        # path to the input YAML file
           input_dir=$(dirname $input_file)                     # parent directory of input YAML file
           git add $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv
+          git add $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png
           git commit -m "Add benchmark results"
           git push
 
@@ -153,6 +162,7 @@ jobs:
           input_files=$(python get_files.py ${{ inputs.path }})
           python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
             tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
+            $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png \
             env.yaml main.py $input_files
 
       - name: Report status to PR
