move zenodo url to env for testing

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -170,6 +170,7 @@ jobs:
       - name: Upload to zenodo
         env:
             ZENODO_TOKEN: ${{ secrets.ZENODO_TOKEN }}
+            ZENODO_URL:  "https://zenodo.org"
         shell: bash -l {0}
         run: |
           bzip2 tmp.sqlite
