--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -168,6 +168,7 @@ jobs:
         with:
           name: results
           path: results.tar
+          retention-days: 14
 
       - name: Upload to zenodo
         env:
