--- a/submissions/2024-11-19-Sage-2.0.0/input.yaml
+++ b/submissions/2024-11-19-Sage-2.0.0/input.yaml
@@ -1,3 +1,3 @@
 forcefield: openff_unconstrained-2.0.0.offxml
 datasets:
-    - datasets/cache/industry.json
+    - datasets/OpenFF-Industry-Benchmark-Season-1-v1.1/cache.json
