--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -3,18 +3,18 @@
 name: Trigger torsion benchmark run on comment with "/run-torsions"
 
 on:
-  issue_comment:
-    types: [created]
+  pull_request:
+    types: [labeled]
 
 jobs:
   trigger:
     permissions: write-all
-    if: ${{ github.event.issue.pull_request }}
+    if: ${{ github.event.label.name == 'torsion-dev' }}
     runs-on: ubuntu-latest
 
     steps:
       - name: Dispatch benchmark
-        if: ${{ github.event.issue.pull_request }}
+        if: ${{ github.event.label.name == 'torsion-dev' }}
         uses: actions/github-script@v6
         with:
           script: |
@@ -30,66 +30,67 @@ jobs:
             //   return
             // }
 
-            // This will 404 if the user is not a collaborator (and cause an
-            // exception below), so this check prevents random users from
-            // triggering the workflow.
-            // https://docs.github.com/en/rest/collaborators/collaborators
-            // ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
-            const commenter = await github.request(
-              'GET /repos/{owner}/{repo}/collaborators/{username}/permission',
-              {
-                owner: owner,
-                repo: repo,
-                username: comment.user.login,
-                headers: {
-                  'X-GitHub-Api-Version': '2022-11-28'
-                }
-              },
-            )
+            console.log("FLAG!")
+            // // This will 404 if the user is not a collaborator (and cause an
+            // // exception below), so this check prevents random users from
+            // // triggering the workflow.
+            // // https://docs.github.com/en/rest/collaborators/collaborators
+            // // ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
+            // const commenter = await github.request(
+            //   'GET /repos/{owner}/{repo}/collaborators/{username}/permission',
+            //   {
+            //     owner: owner,
+            //     repo: repo,
+            //     username: comment.user.login,
+            //     headers: {
+            //       'X-GitHub-Api-Version': '2022-11-28'
+            //     }
+            //   },
+            // )
 
-            const commenter_can_push = commenter.data.user.permissions.push
+            // const commenter_can_push = commenter.data.user.permissions.push
 
-            // Return early if comment sender doesn't have push rights
-            if (!commenter_can_push) {
-              console.log("User does not have push permissions")
-              return
-            }
+            // // Return early if comment sender doesn't have push rights
+            // if (!commenter_can_push) {
+            //   console.log("User does not have push permissions")
+            //   return
+            // }
 
-            const pr = await github.rest.pulls.get({
-              pull_number: pr_number,
-              owner: owner,
-              repo: repo,
-            })
+            // const pr = await github.rest.pulls.get({
+            //   pull_number: pr_number,
+            //   owner: owner,
+            //   repo: repo,
+            // })
 
-            const ref = pr.data.head.ref
+            // const ref = pr.data.head.ref
 
-            // treat everything after the command name as an argument
-            const args = comment.body.split(" ").slice(1);
+            // // treat everything after the command name as an argument
+            // const args = comment.body.split(" ").slice(1);
 
-            const path = args[0]; // path to submission dir
-            if (!path) {
-                console.log("No submission path provided");
-                return;
-            }
-            const env = args[1] ? args[1] : "devtools/torsions.yaml"; // conda env
+            // const path = args[0]; // path to submission dir
+            // if (!path) {
+            //     console.log("No submission path provided");
+            //     return;
+            // }
+            // const env = args[1] ? args[1] : "devtools/torsions.yaml"; // conda env
 
-            // We didn't return early, so dispatch the workflow
-            const dispatch = await github.request(
-              'POST /repos/{owner}/{repo}/actions/workflows/{workflow_id}/dispatches',
-              {
-                owner: owner,
-                repo: repo,
-                workflow_id: 'torsions.yaml',
-                ref: ref,
-                inputs: {
-                    pr_number: pr_number.toString(),
-                    env: env,
-                    path: path
-                },
-                headers: {
-                  'X-GitHub-Api-Version': '2022-11-28'
-                }
-              },
-            )
+            // // We didn't return early, so dispatch the workflow
+            // const dispatch = await github.request(
+            //   'POST /repos/{owner}/{repo}/actions/workflows/{workflow_id}/dispatches',
+            //   {
+            //     owner: owner,
+            //     repo: repo,
+            //     workflow_id: 'torsions.yaml',
+            //     ref: ref,
+            //     inputs: {
+            //         pr_number: pr_number.toString(),
+            //         env: env,
+            //         path: path
+            //     },
+            //     headers: {
+            //       'X-GitHub-Api-Version': '2022-11-28'
+            //     }
+            //   },
+            // )
 
-            console.log(dispatch)
+            // console.log(dispatch)
