--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -30,12 +30,11 @@ jobs:
             //   return
             // }
 
-            console.log("FLAG!")
-            // // This will 404 if the user is not a collaborator (and cause an
-            // // exception below), so this check prevents random users from
-            // // triggering the workflow.
-            // // https://docs.github.com/en/rest/collaborators/collaborators
-            // // ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
+            // / This will 404 if the user is not a collaborator (and cause an
+            // / exception below), so this check prevents random users from
+            // / triggering the workflow.
+            // / https://docs.github.com/en/rest/collaborators/collaborators
+            // / ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
             // const commenter = await github.request(
             //   'GET /repos/{owner}/{repo}/collaborators/{username}/permission',
             //   {
@@ -46,7 +45,7 @@ jobs:
             //       'X-GitHub-Api-Version': '2022-11-28'
             //     }
             //   },
-            // )
+
 
             // const commenter_can_push = commenter.data.user.permissions.push
 
@@ -56,41 +55,43 @@ jobs:
             //   return
             // }
 
-            // const pr = await github.rest.pulls.get({
-            //   pull_number: pr_number,
-            //   owner: owner,
-            //   repo: repo,
-            // })
+            const pr = await github.rest.pulls.get({
+              pull_number: pr_number,
+              owner: owner,
+              repo: repo,
+            })
 
-            // const ref = pr.data.head.ref
+            const ref = pr.data.head.ref
 
-            // // treat everything after the command name as an argument
-            // const args = comment.body.split(" ").slice(1);
+            // treat everything after the command name as an argument
+            const args = comment.body.split(" ").slice(1);
 
             // const path = args[0]; // path to submission dir
             // if (!path) {
             //     console.log("No submission path provided");
             //     return;
             // }
-            // const env = args[1] ? args[1] : "devtools/torsions.yaml"; // conda env
+            const path = "torsion-dev/tmp.yaml" // "submissions" YAML
 
-            // // We didn't return early, so dispatch the workflow
-            // const dispatch = await github.request(
-            //   'POST /repos/{owner}/{repo}/actions/workflows/{workflow_id}/dispatches',
-            //   {
-            //     owner: owner,
-            //     repo: repo,
-            //     workflow_id: 'torsions.yaml',
-            //     ref: ref,
-            //     inputs: {
-            //         pr_number: pr_number.toString(),
-            //         env: env,
-            //         path: path
-            //     },
-            //     headers: {
-            //       'X-GitHub-Api-Version': '2022-11-28'
-            //     }
-            //   },
-            // )
+            const env = "devtools/torsions.yaml"; // conda env
 
-            // console.log(dispatch)
+            // We didn't return early, so dispatch the workflow
+            const dispatch = await github.request(
+              'POST /repos/{owner}/{repo}/actions/workflows/{workflow_id}/dispatches',
+              {
+                owner: owner,
+                repo: repo,
+                workflow_id: 'torsions.yaml',
+                ref: ref,
+                inputs: {
+                    pr_number: pr_number.toString(),
+                    env: env,
+                    path: path
+                },
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28' // OLD?
+                }
+              },
+            )
+
+            console.log(dispatch)
