--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -81,7 +81,7 @@ jobs:
               {
                 owner: owner,
                 repo: repo,
-                workflow_id: 'torsions.yaml',
+                workflow_id: 'run.yaml',
                 ref: ref,
                 inputs: {
                     pr_number: pr_number.toString(),
