--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -24,8 +24,14 @@ jobs:
 
             const comment = context.payload.comment
 
-            // Return early if comment is not the trigger phrase
-            if (!comment.body.startsWith('/run-benchmark')) {
+            // Return early if comment is not one of the trigger phrases. Otherwise
+            // set the type of workflow to dispatch
+            let benchmark_workflow;
+            if (comment.body.startsWith('/run-benchmark')) {
+               benchmark_workflow = "run.yaml"
+            } else if (comment.body.startsWith('/run-torsions')) {
+               benchmark_workflow = "torsions.yaml"
+            } else {
               console.log("Comment is not trigger phrase")
               return
             }
@@ -79,7 +85,7 @@ jobs:
               {
                 owner: owner,
                 repo: repo,
-                workflow_id: 'run.yaml',
+                workflow_id: benchmark_workflow,
                 ref: ref,
                 inputs: {
                     pr_number: pr_number.toString(),
