--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -1,20 +1,20 @@
 # this is adapted from openff-docs/cookbook_pr_trigger.yaml
 
-name: Trigger torsion benchmark run on comment with "/run-torsions"
+name: Trigger benchmark run on comment with "/run-benchmark"
 
 on:
-  pull_request:
-    types: [labeled]
+  issue_comment:
+    types: [created]
 
 jobs:
   trigger:
     permissions: write-all
-    if: ${{ github.event.label.name == 'torsion-dev' }}
+    if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
 
     steps:
       - name: Dispatch benchmark
-        if: ${{ github.event.label.name == 'torsion-dev' }}
+        if: ${{ github.event.issue.pull_request }}
         uses: actions/github-script@v6
         with:
           script: |
@@ -36,30 +36,30 @@ jobs:
               return
             }
 
-            // / This will 404 if the user is not a collaborator (and cause an
-            // / exception below), so this check prevents random users from
-            // / triggering the workflow.
-            // / https://docs.github.com/en/rest/collaborators/collaborators
-            // / ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
-            // const commenter = await github.request(
-            //   'GET /repos/{owner}/{repo}/collaborators/{username}/permission',
-            //   {
-            //     owner: owner,
-            //     repo: repo,
-            //     username: comment.user.login,
-            //     headers: {
-            //       'X-GitHub-Api-Version': '2022-11-28'
-            //     }
-            //   },
+            // This will 404 if the user is not a collaborator (and cause an
+            // exception below), so this check prevents random users from
+            // triggering the workflow.
+            // https://docs.github.com/en/rest/collaborators/collaborators
+            // ?apiVersion=2022-11-28#check-if-a-user-is-a-repository-collaborator
+            const commenter = await github.request(
+              'GET /repos/{owner}/{repo}/collaborators/{username}/permission',
+              {
+                owner: owner,
+                repo: repo,
+                username: comment.user.login,
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28'
+                }
+              },
+            )
 
+            const commenter_can_push = commenter.data.user.permissions.push
 
-            // const commenter_can_push = commenter.data.user.permissions.push
-
-            // // Return early if comment sender doesn't have push rights
-            // if (!commenter_can_push) {
-            //   console.log("User does not have push permissions")
-            //   return
-            // }
+            // Return early if comment sender doesn't have push rights
+            if (!commenter_can_push) {
+              console.log("User does not have push permissions")
+              return
+            }
 
             const pr = await github.rest.pulls.get({
               pull_number: pr_number,
@@ -70,18 +70,14 @@ jobs:
             const ref = pr.data.head.ref
 
             // treat everything after the command name as an argument
-            // const args = comment.body.split(" ").slice(1);
+            const args = comment.body.split(" ").slice(1);
 
-            // const path = args[0]; // path to submission dir
-            // if (!path) {
-            //     console.log("No submission path provided");
-            //     return;
-            // }
-
-            // const path = "torsion-dev/tmp.yaml" // "submissions" YAML
-            const path = "submissions/2024-11-21-Sage-2.2.1/input.yaml"
-
-            const env = "devtools/env.yaml"; // conda env
+            const path = args[0]; // path to submission dir
+            if (!path) {
+                console.log("No submission path provided");
+                return;
+            }
+            const env = args[1] ? args[1] : "devtools/env.yaml"; // conda env
 
             // We didn't return early, so dispatch the workflow
             const dispatch = await github.request(
