--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -146,8 +146,7 @@ jobs:
 
           input_file=${{ inputs.path }}                        # path to the input YAML file
           input_dir=$(dirname $input_file)                     # parent directory of input YAML file
-          git add $input_dir/output/{log_sse}.csv
-          git add $input_dir/output/{log_sse}.csv
+          git add $input_dir/output/log_sse.csv
           git commit -m "Add benchmark results"
           git push
 
@@ -164,7 +163,7 @@ jobs:
           micromamba env export > env.yaml
           input_files=$(python get_files.py ${{ inputs.path }})
           python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
-            tmp.sqlite.bz2 $input_dir/output/{log_sse}.csv \
+            tmp.sqlite.bz2 $input_dir/output/log_sse.csv \
             env.yaml torsions.py $input_files
 
       - name: Report status to PR
