--- a/torsion-dev/tmp.yaml
+++ b/torsion-dev/tmp.yaml
@@ -1,3 +1,3 @@
-forcefield: openff_unconstrained-2.2.1.offxml
+forcefield: openff-2.2.1
 datasets:
     - datasets/torsion-dev/filtered-supp-td.json
