--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -22,4 +22,4 @@ dependencies:
   - tqdm
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@0.1.1
+    - git+https://github.com/openforcefield/yammbs.git@add-torsion-models
