--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,6 +1,6 @@
 # this is adapted from openff-docs/cookbook_preproc.yaml
 
-name: Run benchmarks and commit the results
+name: Run optimization benchmarks and commit the results
 
 on:
   workflow_dispatch:
@@ -90,7 +90,7 @@ jobs:
                 status: 'in_progress',
                 started_at: new Date().toISOString(),
                 output: {
-                  title: 'Run benchmarks',
+                  title: 'Run optimization benchmarks',
                   summary: 'Results and progress: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}',
                   text: ''
                 },
@@ -116,7 +116,7 @@ jobs:
         with:
           environment-file: ${{ inputs.env }}
 
-      - name: Run benchmarks
+      - name: Run optimization benchmarks
         env:
             LICENSE: ${{ secrets.OE_LICENSE }}
         shell: bash -l {0}
@@ -190,7 +190,7 @@ jobs:
         with:
           pr_number: ${{ inputs.pr_number }}
           message: >
-            A workflow dispatched to run benchmarks for this PR has just finished.
+            A workflow dispatched to run optimization benchmarks for this PR has just finished.
 
 
             - Run ID: [${{ github.run_id }}]
@@ -210,7 +210,7 @@ jobs:
         with:
           pr_number: ${{ inputs.pr_number }}
           message: >
-            A workflow dispatched to run benchmarks for this PR has just failed.
+            A workflow dispatched to run optimization benchmarks for this PR has just failed.
 
 
             - Run ID: [${{ github.run_id }}]
