--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -27,9 +27,9 @@ jobs:
             // Return early if comment is not one of the trigger phrases. Otherwise
             // set the type of workflow to dispatch
             let benchmark_workflow;
-            if (comment.body.startsWith('/run-benchmark')) {
+            if (comment.body.startsWith('/run-optimization-benchmarks')) {
                benchmark_workflow = "run.yaml"
-            } else if (comment.body.startsWith('/run-torsions')) {
+            } else if (comment.body.startsWith('/run-torsion-benchmarks')) {
                benchmark_workflow = "torsions.yaml"
             } else {
               console.log("Comment is not trigger phrase")
