--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -8,8 +8,8 @@ dependencies:
   - python
   - pip
 
-  - qcportal >=0.49
-  - openff-qcsubmit >=0.52
+  - qcportal ~=0.57
+  - openff-qcsubmit
   - openff-toolkit
   - openeye-toolkits
   - geometric =1
@@ -22,4 +22,4 @@ dependencies:
   - tqdm
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@add-torsion-models
+    - git+https://github.com/openforcefield/yammbs.git@0.2.0
