--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -146,7 +146,7 @@ jobs:
 
           input_file=${{ inputs.path }}                        # path to the input YAML file
           input_dir=$(dirname $input_file)                     # parent directory of input YAML file
-          git add $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv
+          git add $input_dir/output/{dde,rmsd,tfd}.csv
           git add $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png
           git commit -m "Add benchmark results"
           git push
@@ -160,7 +160,7 @@ jobs:
           micromamba env export > env.yaml
           input_files=$(python get_files.py ${{ inputs.path }})
           tar cf results.tar \
-            tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
+            tmp.sqlite.bz2 $input_dir/output/{dde,rmsd,tfd}.csv \
             $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png \
             env.yaml main.py $input_files
 
@@ -179,7 +179,7 @@ jobs:
         run: |
           input_files=$(python get_files.py ${{ inputs.path }})
           python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
-            tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
+            tmp.sqlite.bz2 $input_dir/output/{dde,rmsd,tfd}.csv \
             $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png \
             env.yaml main.py $input_files
 
