--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -175,7 +175,7 @@ jobs:
         if: always() && github.event_name == 'workflow_dispatch' && inputs.pr_number != ''
         uses: thollander/actions-comment-pull-request@v3
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow dispatched to run torsion benchmarks for this PR has just finished.
 
