--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -56,7 +56,7 @@ jobs:
         if: github.event_name == 'workflow_dispatch' && inputs.pr_number != ''
         uses: thollander/actions-comment-pull-request@v3
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow has been dispatched to run the benchmarks for this PR.
 
