--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -56,7 +56,7 @@ jobs:
         if: github.event_name == 'workflow_dispatch' && inputs.pr_number != ''
         uses: thollander/actions-comment-pull-request@v3
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow has been dispatched to run the benchmarks for this PR.
 
@@ -192,7 +192,7 @@ jobs:
         if: always() && steps.reportStatusToPr.outcome == 'failure'
         uses: thollander/actions-comment-pull-request@v3
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow dispatched to run torsion benchmarks for this PR has just failed.
 
