--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -54,9 +54,9 @@ jobs:
     steps:
       - name: Report dispatch to PR
         if: github.event_name == 'workflow_dispatch' && inputs.pr_number != ''
-        uses: thollander/actions-comment-pull-request@v3
+        uses: thollander/actions-comment-pull-request@v3.0.1
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow has been dispatched to run the benchmarks for this PR.
 
@@ -183,7 +183,7 @@ jobs:
       - name: Report status to PR
         id: reportStatusToPr
         if: always() && github.event_name == 'workflow_dispatch' && inputs.pr_number != ''
-        uses: thollander/actions-comment-pull-request@v3
+        uses: thollander/actions-comment-pull-request@v3.0.1
         with:
           pr-number: ${{ inputs.pr_number }}
           message: >
@@ -203,9 +203,9 @@ jobs:
 
       - name: Report status to PR on templating failure
         if: always() && steps.reportStatusToPr.outcome == 'failure'
-        uses: thollander/actions-comment-pull-request@v3
+        uses: thollander/actions-comment-pull-request@v3.0.1
         with:
-          pr_number: ${{ inputs.pr_number }}
+          pr-number: ${{ inputs.pr_number }}
           message: >
             A workflow dispatched to run optimization benchmarks for this PR has just failed.
 
