--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -21,5 +21,8 @@ dependencies:
   - seaborn
   - tqdm
 
+  # optional, GAFF only
+  - openmmforcefields
+
   - pip:
     - git+https://github.com/openforcefield/yammbs.git@0.2.0
