pytorch no cuda

--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -24,5 +24,8 @@ dependencies:
   # optional, GAFF only
   - openmmforcefields
 
+  # toolkit now pulls in nagl, which is large, and cuda? let's try not doing cuda
+  - pytorch=*=*cpu
+
   - pip:
     - git+https://github.com/openforcefield/yammbs.git@0.2.0
