--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -25,7 +25,7 @@ dependencies:
   - openmmforcefields
 
   # toolkit now pulls in nagl, which is large, and cuda? let's try not doing cuda
-  - pytorch=*=*cpu
+  - pytorch=*=*cpu*
 
   - pip:
     - git+https://github.com/openforcefield/yammbs.git@0.2.0
