--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -24,5 +24,9 @@ dependencies:
   # optional, GAFF only
   - openmmforcefields
 
+   # toolkit v0.17+ pulls in nagl and pytorch
+   # we want the CPU-only version of pytorch for space reasons
+  - pytorch=*=*cpu*
+
   - pip:
     - git+https://github.com/openforcefield/yammbs.git@0.2.0
