--- a/submissions/2025-09-16-split-N-vdW-v1/input.yaml
+++ b/submissions/2025-09-16-split-N-vdW-v1/input.yaml
@@ -1,3 +1,3 @@
 forcefield: submissions/2025-09-16-split-N-vdW-v1/split-n-vdw-v1.offxml
 datasets:
-  - datasets/cache/industry.json
+  - datasets/OpenFF-Industry-Benchmark-Season-1-v1.1/cache.json
