Map changes onto torsion workflow

--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -153,6 +153,7 @@ jobs:
           echo input_dir="${input_dir}" >> $GITHUB_ENV
 
       - name: Upload to zenodo
+        id: uploadToZenodo
         env:
             ZENODO_TOKEN: ${{ secrets.ZENODO_TOKEN }}
             ZENODO_URL:  "https://zenodo.org"
@@ -162,10 +163,13 @@ jobs:
           bzip2 torsions-dev.sqlite
           micromamba env export > env.yaml
           input_files=$(python get_files.py ${{ inputs.path }})
-          python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
+
+          deposition_id=$(python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
             torsions-dev.sqlite.bz2 $input_dir/output/rmsd.csv \
             torsions-dev.sqlite.bz2 $input_dir/output/een.csv \
-            env.yaml torsions.py $input_files
+            env.yaml torsions.py $input_files)
+
+          echo "value=$deposition_id" >> "$GITHUB_OUTPUT"
 
       - name: Report status to PR
         id: reportStatusToPr
@@ -186,6 +190,8 @@ jobs:
             - Job status: **${{ job.status }}**
 
             [${{ github.run_id }}]: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            - Zenodo URL: http://zenodo.org/records/${{ steps.uploadToZenodo.outputs.value}}
 
 
       - name: Report status to PR on templating failure
