--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -8,21 +8,27 @@ dependencies:
   - python
   - pip
 
-  - qcportal ~=0.57
-  - openff-qcsubmit
-  - openff-toolkit
-  - openeye-toolkits
-  - geometric =1
+  - qcportal =0.63
+  - openff-qcsubmit =0.57
+  - openff-toolkit =0.18.0  # base to avoid ambertools ... ?
+  - openff-interchange =0.4.9
+  - openff-nagl =0.5.4
+  - openff-forcefields =2025.10.1
+
+  - openmm =8.4.0
+  - openeye-toolkits =2025.1.1
+  - rdkit =2025.03.6
+  - geometric =1.1
 
   - click
   - matplotlib
-  - numpy
+  - numpy  # I doubt we'd run into behavior differences
   - pandas
   - seaborn
   - tqdm
 
   # optional, GAFF only
-  - openmmforcefields
+  - openmmforcefields =0.14.2
 
    # toolkit v0.17+ pulls in nagl and pytorch
    # we want the CPU-only version of pytorch for space reasons
