--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -191,7 +191,7 @@ jobs:
 
             [${{ github.run_id }}]: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-            - Zenodo URL: http://zenodo.org/records/${{ steps.uploadToZenodo.outputs.value}}
+            - Zenodo URL: http://zenodo.org/uploads/${{ steps.uploadToZenodo.outputs.value}}
 
 
       - name: Report status to PR on templating failure
