--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -12,14 +12,17 @@ dependencies:
   - openff-qcsubmit
   - openff-toolkit
   - openeye-toolkits
-  - geometric =1
 
   - click
   - matplotlib
   - numpy
+  - MDAnalysis
   - pandas
+
   - seaborn
   - tqdm
+  - bokeh
+  - panel
 
   # optional, GAFF only
   - openmmforcefields
@@ -29,4 +32,4 @@ dependencies:
   - pytorch=*=*cpu*
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@0.2.0
+    - git+https://github.com/openforcefield/yammbs.git@mdanalysis-internal-coordinates
