--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -5,7 +5,7 @@ channels:
   - openeye
 
 dependencies:
-  - python
+  - python =3.11
   - pip
 
   - qcportal ~=0.57
@@ -32,4 +32,4 @@ dependencies:
   - pytorch=*=*cpu*
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@mdanalysis-internal-coordinates
+    - git+https://github.com/openforcefield/yammbs.git@724e4e3e800507b8437822d6b356c294aae5df63
