--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -121,7 +121,7 @@ jobs:
           set -e
           echo "$LICENSE" > /tmp/oe_license.txt
           export OE_LICENSE=/tmp/oe_license.txt
-          python main.py ${{ inputs.path }} $(nproc)
+          micromamba run -n yammbs-dataset-submission python main.py ${{ inputs.path }} $(nproc)
           rm $OE_LICENSE
 
       - name: Plot results
