--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -32,4 +32,4 @@ dependencies:
   - pytorch=*=*cpu*
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@5503d38c2d2ae7f90598324b378241b45bb76e28
+    - git+https://github.com/openforcefield/yammbs.git@0.3.0
