--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -177,7 +177,7 @@ jobs:
         run: |
           input_files=$(python get_files.py ${{ inputs.path }})
 
-          deposition_id=$(python zenodo_upload.py --title "YDS PR #${{ inputs.pr_number }}" \
+          deposition_id=$(python zenodo_upload.py --title "${{ inputs.title }}" \
             tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
             $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png \
             env.yaml main.py $input_files)
