--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -81,6 +81,9 @@ jobs:
             }
             const env = args[1] ? args[1] : "devtools/env.yaml"; // conda env
 
+            // everything after the second space in `args`, since the title can have spaces
+            const name = args.slice(2).join(" ");
+
             // We didn't return early, so dispatch the workflow
             const dispatch = await github.request(
               'POST /repos/{owner}/{repo}/actions/workflows/{workflow_id}/dispatches',
@@ -93,6 +96,7 @@ jobs:
                     pr_number: pr_number.toString(),
                     env: env,
                     path: path
+                    name: name
                 },
                 headers: {
                   'X-GitHub-Api-Version': '2022-11-28'
