--- a/.github/workflows/torsions.yaml
+++ b/.github/workflows/torsions.yaml
@@ -164,7 +164,7 @@ jobs:
           micromamba env export > env.yaml
           input_files=$(python get_files.py ${{ inputs.path }})
 
-          deposition_id=$(python zenodo_upload.py --title "YDS Upload ${{ inputs.pr_number }}" \
+          deposition_id=$(python zenodo_upload.py --title "${{ inputs.title }}" \
             torsions-dev.sqlite.bz2 $input_dir/output/rmsd.csv \
             torsions-dev.sqlite.bz2 $input_dir/output/een.csv \
             env.yaml torsions.py $input_files)
