--- a/.github/workflows/run_trigger.yaml
+++ b/.github/workflows/run_trigger.yaml
@@ -95,7 +95,7 @@ jobs:
                 inputs: {
                     pr_number: pr_number.toString(),
                     env: env,
-                    path: path
+                    path: path,
                     name: name
                 },
                 headers: {
