Can this one be updated live ... ?

--- a/.github/workflows/opt.yaml
+++ b/.github/workflows/opt.yaml
@@ -181,7 +181,7 @@ jobs:
         run: |
           input_files=$(python get_files.py ${{ inputs.path }})
 
-          deposition_id=$(python zenodo_upload.py --title ${{ inputs.name }} \
+          deposition_id=$(python zenodo_upload.py --title "${{ inputs.name }}" \
             tmp.sqlite.bz2 $input_dir/output/{dde,icrmsd,rmsd,tfd}.csv \
             $input_dir/output/{dde,rmsd,rmsd_cdf,tfd,tfd_cdf,bonds,angles,dihedrals,impropers}.png \
             env.yaml main.py $input_files)
