--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -15,6 +15,7 @@ dependencies:
   - geometric =1
 
   - click
+  - typer
   - matplotlib
   - numpy
   - pandas
@@ -29,4 +30,4 @@ dependencies:
   - pytorch=*=*cpu*
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@0.2.0
+    - git+https://github.com/openforcefield/yammbs.git@feature-more-torsion-metrics
