--- a/devtools/env.yaml
+++ b/devtools/env.yaml
@@ -10,29 +10,29 @@ dependencies:
 
   - qcportal =0.63
   - openff-qcsubmit =0.57
-  - openff-toolkit =0.18.0  # base to avoid ambertools ... ?
-  - openff-interchange =0.4.9
+  - openff-toolkit =0.18.0  # base to avoid ambertools
+  - openff-interchange =0.5.0
   - openff-nagl =0.5.4
-  - openff-forcefields =2025.10.1
+  - openff-forcefields =2026.01.0
 
   - openmm =8.4.0
   - openeye-toolkits =2025.1.1
-  - rdkit =2025.03.6
-  - geometric =1.1
+  - rdkit =2025.09.4  # needed for NAGL only?
+  - MDAnalysis =2.10.0
 
-  - click
+  - typer
   - matplotlib
-  - numpy  # I doubt we'd run into behavior differences
+  - numpy
   - pandas
   - seaborn
   - tqdm
 
   # optional, GAFF only
-  - openmmforcefields =0.14.2
+  - openmmforcefields =0.15.1
 
    # toolkit v0.17+ pulls in nagl and pytorch
    # we want the CPU-only version of pytorch for space reasons
   - pytorch=*=*cpu*
 
   - pip:
-    - git+https://github.com/openforcefield/yammbs.git@0.2.0
+    - git+https://github.com/openforcefield/yammbs.git@0.3.1
